# bad-idea

./: ChangeLog.md  JeremyBackpropMazur.hs  JeremyBackpropMazurVector.hs  Main.hs  Perceptron.hs  Perceptron2.hs  TalieNeuron.hs  TaliePerceptron.hs  bad-idea.cabal  shell.nix
Data/: MNIST.hs
