name:                bad-idea
version:             0.1.0.0
synopsis:            Another neural network / deep learning library
homepage:            http://www.github.com/n-heptane-lab/bad-idea
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            AI
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     BadIdea
  build-depends:       attoparsec,
                       attoparsec-binary,
                       base >=4.9 && <4.10,
                       data-binary-ieee754,
                       bytestring,
                       pipes-attoparsec,
                       vector
  default-language:    Haskell2010
